
    o	as.octmode() and as.hexmode() now allow inputs of length other
	than one.

	The format() and print() methods for "octmode" now preserve
	names and dimensions (as those for "hexmode" did).

	The format() methods for classes "octmode" and "hexmode" gain
	a 'width' argument.

    o	seq.int() returns an integer result in some further cases
	where seq() does, e.g. seq.int(1L, 9L, by = 2L).
	
    o	Added \subsection{}{} macro to Rd syntax, for subsections
    	within sections.

    o	n-dimensional arrays with dimension names can now be indexed
	by an n-column character matrix. The indices are matched
	against the dimension names.  NA indices are propagated to the
	result.  Unmatched values and "" are not allowed and result in
	an error.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	The "quick" dispatch of S4 methods for primitive functions was
	not happening, forcing a search each time.  (Dispatch for
	closures was not affected.)  A side effect is that default
	values for arguments in a method that do not have defaults in
	the generic will now be ignored.

    o	Trying to dispatch S4 methods for primitives during the search
	for inherited methods slows that search down and potentially
	could cause an infinite recursion.  An internal switch was
	added to turn off all such methods from