@@ -215,7 +215,7 @@ NEW FEATURES
 
     o	seq.int() returns an integer result in some further cases
 	where seq() does, e.g. seq.int(1L, 9L, by = 2L).
-	
+
     o	Added \subsection{}{} macro to Rd syntax, for subsections
     	within sections.
 
@@ -358,6 +358,10 @@ BUG FIXES
 
     o	sprintf() was not re-entrant, which potentially caused problems
 	if an as.character() method called it.
+
+    o	p.adjust(*, method, n)  now works correctly for the rare case
+    	n > length(p), also when method differs from "bonferroni" or
+    	"none", thanks to a patch from Gordon Smyth.
 
 
 
